Updating review form

--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -93,7 +93,8 @@
 
 .review-form-button:hover {
     cursor: pointer;
-    transition: 1.0s;
+    transition: 0.5s;
+    opacity: 0.7;
 }
 
 .review-form-cancel {
