--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -112,3 +112,26 @@
 .review-form-cancel:hover {
     cursor: pointer;
 }
+
+//////////////////////////////////////// REVIEW STARS //////////////////////////
+
+.star-input {
+    display: none;
+    // padding: 2px;
+}
+
+.star-label {
+    // size: 10px;
+    color: white;
+    background-color: rgb(201, 199, 199);
+    padding: 7px;
+    margin: 2px;
+    // border: solid 1px black;
+    border: solid 1px rgb(201, 199, 199);
+    border-radius: 4px;
+}
+
+.star-label:hover {
+    cursor: pointer;
+    
+}
