--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <%= csrf_meta_tags%> 
     <%= javascript_include_tag 'application' %>
 
+    <script type="text/javascript">
+      window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
+    </script>
+
   </head>
 
   <body>
