--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,19 @@
     <%= javascript_include_tag 'application' %>
 
     <script type="text/javascript">
-      window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
+      // window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
+      // window.oneStar = "<%= image_url('') %>";
+      // window.oneHalfStar = "<%= image_url('') %>";
+      // window.twoStar = "<%= image_url('') %>";
+      // window.twoHalfStar = "<%= image_url('') %>";
+      // window.threeStar = "<%= image_url('') %>";
+      // window.threeHalfStar = "<%= image_url('') %>";
+      // window.fourStar = "<%= image_url('') %>";
+      // window.fourHalfStar = "<%= image_url('') %>";
+      // window.fiveStar = "<%= image_url('') %>";
+      window.oneFav = "<%= image_url('fav_1.png') %>";
+      window.twoFav = "<%= image_url('fav_2.png') %>";
+      window.threeFav = "<%= image_url('fav_3.jpg') %>";
     </script>
 
   </head>
