--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -27,6 +27,27 @@
     flex: 1 1 auto;    
 }
 
+.business-rating {
+    display: flex;
+}
+
+// .business-rating img {
+//     // padding-left: 5px;
+//     padding-right: 10px;
+// }
+
+.business-rating > span {
+    padding-top: 7px;
+    // padding-left: 10px;
+    // padding-left: 5px;
+    color: gray;
+}
+
+.business-rating-count {
+    padding-top: 7px;
+    padding-left: 10px;
+}
+
 .business-price-category > span {
     padding-right: 5px;
 }
