--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
 
     <script type="text/javascript">
       // window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
-      window.oneStar = "<%= image_url('1_star') %>";
-      window.oneHalfStar = "<%= image_url('1_half_star') %>";
-      window.twoStar = "<%= image_url('2_star') %>";
-      window.twoHalfStar = "<%= image_url('2_half_star') %>";
-      window.threeStar = "<%= image_url('3_star') %>";
-      window.threeHalfStar = "<%= image_url('3_half_star') %>";
-      window.fourStar = "<%= image_url('4_star') %>";
-      window.fourHalfStar = "<%= image_url('4_half_star') %>";
-      window.fiveStar = "<%= image_url('5_star') %>";
+      window.oneStar = "<%= image_url('1_star.png') %>";
+      window.oneHalfStar = "<%= image_url('1_half_star.png') %>";
+      window.twoStar = "<%= image_url('2_star.png') %>";
+      window.twoHalfStar = "<%= image_url('2_half_star.png') %>";
+      window.threeStar = "<%= image_url('3_star.png') %>";
+      window.threeHalfStar = "<%= image_url('3_half_star.png') %>";
+      window.fourStar = "<%= image_url('4_star.png') %>";
+      window.fourHalfStar = "<%= image_url('4_half_star.png') %>";
+      window.fiveStar = "<%= image_url('5_star.png') %>";
       window.oneFav = "<%= image_url('fav_1.png') %>";
       window.twoFav = "<%= image_url('fav_2.png') %>";
       window.threeFav = "<%= image_url('fav_3.jpg') %>";
