--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
       window.oneFav = "<%= image_url('fav_1.png') %>";
       window.twoFav = "<%= image_url('fav_2.png') %>";
       window.threeFav = "<%= image_url('fav_3.jpg') %>";
+      window.splashBackground = "<%= image_url('splash.jpg') %>";
     </script>
 
   </head>
