--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -333,8 +333,8 @@
 /////////////////////////////// SCROLL IMAGE ////////////////////////////////
 
 .scroll-container {
-    // width: 665px;
-    width: 680px;
+    width: 665px;
+    // width: 680px;
     box-sizing: border-box;
 }
 
@@ -374,4 +374,5 @@
 
 #scroll-left {
     top: 58%;
+    left: 35.8%;
 }
