--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
     <script type="text/javascript">
       // window.googleAPIKey = "<%= Rails.application.credentials.google[:api_key] %>";
+      window.zeroStar = "<%= image_url('large_0.png') %>";
       window.oneStar = "<%= image_url('1_star.png') %>";
       window.oneHalfStar = "<%= image_url('1_half_star.png') %>";
       window.twoStar = "<%= image_url('2_star.png') %>";
@@ -19,6 +20,7 @@
       window.threeStar = "<%= image_url('3_star.png') %>";
       window.threeHalfStar = "<%= image_url('3_half_star.png') %>";
       window.fourStar = "<%= image_url('4_star.png') %>";
+      // window.fourStar = "<%= image_url('large_4.png') %>";
       window.fourHalfStar = "<%= image_url('4_half_star.png') %>";
       window.fiveStar = "<%= image_url('5_star.png') %>";
       window.oneFav = "<%= image_url('fav_1.png') %>";
