--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -33,7 +33,8 @@
 	// 	-1.5px 1.5px 0 #fff,
     // 	1.5px 1.5px 0 #fff;
     padding-left: 18px;
-    padding-right: 10px;
+    // padding-right: 10px;
+    padding-right: 5px;
 }
 
 .nav-logo a {
