--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -66,6 +66,22 @@
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     font-family: Arial, Helvetica, sans-serif;
+    // -webkit-transform: rotate(-45deg); 
+    // -moz-transform: rotate(-45deg); 
+    // -o-transform: rotate(-45deg);
+    // transform: rotate(-45deg);
+}
+
+.search-icon {
+    -webkit-transform: rotate(-45deg); 
+    -moz-transform: rotate(-45deg); 
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    font-size: 20px;
+    padding: 0 10px;
+    height: 6px;
+    // justify-content: center;
+    // display: flex;
 }
 
 .search-button:hover {
@@ -77,17 +93,30 @@
 .search-shortcuts {
     display: flex;
     justify-content: space-evenly;
+    // justify-content: space-between;
     margin-top: 20px;
     text-shadow: 1px 1px 0 0 black;
     padding-bottom: 150px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-weight: bold;
+    // padding: 0 265px;
+}
+
+.search-shortcuts a {
+    // border: 1px solid white;
+    border: none;
+    border-radius: 4px;
+    background-color: none;
+    padding: 10px;
 }
 
 .search-shortcuts a:hover {
     cursor: pointer;
-    text-decoration: underline;
+    // text-decoration: underline;
+    background-color: white;
+    // color: rgb(150, 150, 150);
+    color: black;
 }
 
 // .favorites {
