--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -43,6 +43,8 @@
 
 .formtype-header {
     text-transform: capitalize;
+    // display: flex;
+    // justify-content: center;
 }
 
 .session-intro {
@@ -103,7 +105,9 @@
     text-align: center;
     border: none;
     border-top: solid 1px gray;
-    width: 250px;
+    // width: 250px;
+    width: 270px;
+    padding-bottom: 25px;
 }
 
 .or-divider legend {
@@ -117,12 +121,25 @@
 //     // border-radius: 5px;
 // }
 
-.session-name-input {
+.session-fname-input {
     background-color: white;
     border: solid 1px gray;
     outline: none;
     border-radius: 4px;
-    width: 110px;
+    // width: 110px;
+    width: 250px;
+    margin-right: 9px;
+    padding: 5px 10px;
+    font-size: 14px;
+}
+
+.session-lname-input {
+    background-color: white;
+    border: solid 1px gray;
+    outline: none;
+    border-radius: 4px;
+    // width: 110px;
+    width: 250px;
     margin-right: 9px;
     padding: 5px 10px;
     font-size: 14px;
