--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -252,3 +252,116 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+
+//LOGOUT DROPDOWN////////////////////////////
+
+// .nav-user {
+//     display: flex;
+// }
+
+// .nav-user {
+//     display: flex;
+//     // width: 100%;
+//     // height: 10px;
+//     // padding-top: 25px;
+//     // padding-bottom: 25px;
+//     // background-color: rgb(201, 29, 29);
+//     // background-color: #db0e0e;
+//     // justify-content: space-between;
+//     justify-content: center;
+//     flex-direction: row;
+//     // margin-left: 20px;
+// }
+
+/* The dropdown container */
+.logout-dropdown {
+    // display: flex;
+    // float: left;
+    // overflow: hidden;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.dropbtn {
+    text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Dropdown button */
+.logout-dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    // padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* Add a red background color to navbar links on hover */
+.logout-dropdown:hover .dropbtn {
+    background-color: white;
+    color: black;
+}
+
+/* Dropdown content (hidden by default) */
+.logout-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+// .logout-dropdown {
+//     // padding-left: 400px;
+// }
+
+.logout-dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+// .dropbtn {
+//     // margin-left: 20px;
+// }
+
+.dropbtn:hover {
+    text-decoration: none;
+    background-color: transparent;
+}
+
+/* Add a grey background color to dropdown links on hover */
+// .logout-dropdown-content a:hover {
+// //   background-color: #ddd;
+// //   background-color: transparent;
+//     // background-color: none;
+//     // text-decoration: none;
+// }
+
+/* Show the dropdown menu on hover */
+.logout-dropdown:hover .logout-dropdown-content {
+    display: block;
+    border-radius: 0 0 4px 4px;
+//   background-color: transparent;
+}
+
+.profile-pic {
+    width: 20px;
+    height: 20px;
+    padding-top: 10px;
+}
