--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -48,8 +48,10 @@
 // }
 
 .signup-login {
-    // // padding-right: 240px;
+    // width: 100px;
+    // padding-right: 240px;
     padding-left: 335px;
+    // padding-left: 400px;
     // padding-right: 150px;
 }
 
@@ -94,6 +96,7 @@
 // }
 
 .github-linkedin-link {
+    // width: 100px;
     // // padding-left: 240px;
     padding-right: 335px;
     // padding-left: 150px;
@@ -152,6 +155,10 @@
     text-decoration: none;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    // padding-right: 240px;
+    // padding-left: 100px;
+    // padding-left: 335px;
+    // width: 200px;
 }
 
 .dropbtn {
@@ -167,9 +174,15 @@
     outline: none;
     color: white;
     // padding: 14px 16px;
-    background-color: inherit;
+    // background-color: inherit;
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 4px;
+    // margin: 10px;
+    padding: 10px;
+    // width: 200px;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
+    // padding-bottom: 5px;
     text-transform: capitalize;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -178,7 +191,12 @@
 /* Add a red background color to navbar links on hover */
 .logout-dropdown:hover .dropbtn {
     background-color: white;
+    border-radius: 4px 4px 4px 0;
+    // background-color: transparent;
     color: black;
+    // color: white;
+    // text-decoration: underline;
+    // width: 200px;
 }
 
 /* Dropdown content (hidden by default) */
@@ -191,9 +209,18 @@
     z-index: 1;
 }
 
+.logout-link:hover {
+    cursor: pointer;
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+    text-decoration: underline;
+}
+
 /* Links inside the dropdown */
 .logout-dropdown {
-    padding-left: 400px;
+    // padding-left: 400px;
+    // margin-left: 400px;
+    margin-left: 335px;
+    // margin-left: 325px;
 }
 
 .logout-dropdown-content a {
@@ -206,22 +233,22 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.dropbtn {
-    // margin-left: 20px;
-}
+// .dropbtn {
+//     // margin-left: 20px;
+// }
 
-.dropbtn:hover {
-    text-decoration: none;
-    background-color: transparent;
-}
+// .dropbtn:hover {
+//     text-decoration: none;
+//     background-color: transparent;
+// }
 
 /* Add a grey background color to dropdown links on hover */
-.logout-dropdown-content a:hover {
-//   background-color: #ddd;
-//   background-color: transparent;
-    // background-color: none;
-    // text-decoration: none;
-}
+// .logout-dropdown-content a:hover {
+// //   background-color: #ddd;
+// //   background-color: transparent;
+//     // background-color: none;
+//     // text-decoration: none;
+// }
 
 /* Show the dropdown menu on hover */
 .logout-dropdown:hover .logout-dropdown-content {
@@ -230,10 +257,23 @@
 //   background-color: transparent;
 }
 
-.profile-pic {
-    width: 20px;
-    height: 20px;
-    padding-top: 10px;
+.logout-link:hover {
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(33,33,33,.2);
+}
+
+.splash-profile-pic {
+    // width: 20px;
+    // height: 20px;
+    width: 25px;
+    height: 25px;
+    // padding-top: 10px;
+    padding: 5px;
+    margin-left: 5px;
+    // margin-top: 5px;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: white;
 }
 
 // .splash-background-cover {
