--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -146,6 +146,7 @@
     text-decoration: none;
     color: royalblue;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 .favorites-list a:hover {
