--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -96,7 +96,8 @@
     // justify-content: space-between;
     margin-top: 20px;
     text-shadow: 1px 1px 0 0 black;
-    padding-bottom: 150px;
+    // padding-bottom: 150px;
+    padding-bottom: 225px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-weight: bold;
@@ -134,7 +135,8 @@
 }
 
 .favorites {
-    padding-top: 75px;
+    // padding-top: 75px;
+    background-color: white;
 }
 
 .favorites-list {
