--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -197,3 +197,10 @@
     color: royalblue;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.session-errors {
+    color: red;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
