Update seed and styling

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -302,3 +302,12 @@
     top: 0;
     width: 100%;
 }
+
+.footer-img img {
+    // display: flex;
+    // justify-content: center;
+    width: 100%;
+    // height: 20px;
+    // object-fit: fill;
+    padding-top: 20px;
+}
