--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
       window.twoFav = "<%= image_url('fav_2.png') %>";
       window.threeFav = "<%= image_url('fav_3.jpg') %>";
       window.splashBackground = "<%= image_url('splash_fit.png') %>";
+      window.signup = "<%= image_url('signup.png') %>";
+      window.review = "<%= image_url('review_form.png') %>";
+      window.footer = "<%= image_url('footer_image.png') %>";
     </script>
 
   </head>
