--- a/app/assets/stylesheets/review_form.scss
+++ b/app/assets/stylesheets/review_form.scss
@@ -31,6 +31,7 @@
 }
 
 .review-form-contents {
+    display: flex;
     padding-left: 110px;
     padding-right: 110px;
 }
@@ -111,6 +112,10 @@
 
 .review-form-cancel:hover {
     cursor: pointer;
+}
+
+.review-form-img {
+  padding: 100px 0 0 80px;
 }
 
 //////////////////////////////////////// REVIEW STARS //////////////////////////
