--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,8 @@
       window.splashBackground = "<%= image_url('splash_fit.png') %>";
       window.signup = "<%= image_url('signup.png') %>";
       window.review = "<%= image_url('review_form.png') %>";
-      window.footer = "<%= image_url('footer_image.png') %>";
+      // window.footer = "<%= image_url('footer_image.png') %>";
+      window.footer = "<%= image_url('footer_img_2.jpg') %>";
     </script>
 
   </head>
