Add logout functionality to components and update styling

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -99,6 +99,11 @@
     border-bottom: 2px solid white;
 }
 
+.github-linkedin-link img {
+    width: 40px;
+    height: auto;
+}
+
 .header-title {
     display: flex;
     justify-content: center;
