--- a/app/assets/stylesheets/business_show.scss
+++ b/app/assets/stylesheets/business_show.scss
@@ -435,10 +435,12 @@
     // position: absolute;
     // margin-right: 585px;
     margin-right: 535px;
+    outline: none;
 }
 
 #scroll-right {
     z-index: 10;
+    outline: none;
 }
 
 // .scroll-sizing button {
