--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
       window.review = "<%= image_url('review_form.png') %>";
       // window.footer = "<%= image_url('footer_image.png') %>";
       window.footer = "<%= image_url('footer_img_2.jpg') %>";
+      window.github = "<%= image_url('GitHub-Mark-Light-120px-plus.png') %>";
+      window.linkedin = "<%= image_url('LI-In-Bug.png') %>"
     </script>
 
   </head>
